Novick fixing creditability value